--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,22 +13,28 @@
     
     <header>
       <div class="header-logo">
-        <%= link_to("TweetApp","/") %>
+        <%= link_to "TweetApp", root_path %>
       </div>
       <ul class="header-menus">
         <li>
-        <%= link_to("TweetAppとは","/about") %>
+        <%= link_to "TweetAppとは",about_path %>
         </li>
         <li>
-        <%= link_to("投稿一覧","/posts/index") %>
+        <%= link_to "投稿一覧", posts_index_path %>
         </li>
         <li>
-        <%= link_to("新規投稿","/posts/new") %>
+        <%= link_to "新規投稿", posts_new_path %>
+        </li>
+        <li>
+        <%= link_to "ユーザー一覧", users_index_path %>
+        </li>
+        <li>
+        <%= link_to "新規登録", signup_path  %>
         </li>
       </ul>
     </header>
     
-    <
+    
     <% if flash[:notice]%>
       <div class="flash">
         <%= flash[:notice] %>
