--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,10 @@
 <div class="main user-show">
     <div class= "containe">
         <div class="user">
+        <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' , fallback: "no_image.jpg" %>
             <h2><%= @user.name %></h2>
             <p><%= @user.email %></p>
+            <%= link_to "編集", edit_path(@user.id) %>
         </div>
      </div>
 </div>
