--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,8 +3,11 @@
     <h1 class="users-heading">ユーザー一覧</h1>
     <% @users.each do |user| %>
       <div class="users-index-item">
+      <div class="user-left">
+          <%= attachment_image_tag user, :profile_image , :fill, 60, 60, format: 'jpeg' , fallback: "no_image.jpg" %>
+        </div>
         <div class="user-right">
-          <%= user.name %>
+          <%= link_to user.name, show_path(user.id) %>
         </div>
       </div>
     <% end %>
