--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,24 +13,33 @@
     
     <header>
       <div class="header-logo">
-        <%= link_to "TweetApp", root_path %>
+        <% if @current_user %>
+          <%= link_to "TweetApp",posts_index_path  %>
+        <% else %>
+          <%= link_to "TweetApp", root_path %>
+        <% end %>
       </div>
       <ul class="header-menus">
-        <li>
-        <%= link_to "TweetAppとは",about_path %>
-        </li>
-        <li>
-        <%= link_to "投稿一覧", posts_index_path %>
-        </li>
-        <li>
-        <%= link_to "新規投稿", posts_new_path %>
-        </li>
-        <li>
-        <%= link_to "ユーザー一覧", users_index_path %>
-        </li>
-        <li>
-        <%= link_to "新規登録", signup_path  %>
-        </li>
+        <% @@current_user = User.find_by(id: session[:user_id]) %>
+          <% if @current_user %>
+          <li>
+            <%= link_to @current_user.name, show_path(@current_user.id)  %>
+          </li>
+          <li><%= link_to "投稿一覧", posts_index_path %></li>
+          <li><%= link_to "新規投稿", posts_new_path%></li>
+          <li><%= link_to "ユーザー一覧", users_index_path %></li>
+          <li><%= link_to "ログアウト", logout_path, {method: :post} %></li>
+        <% else %>
+          <li>
+          <%= link_to "TweetAppとは",about_path %>
+          </li>
+          <li>
+          <%= link_to "新規登録", signup_path  %>
+          </li>
+          <li>
+          <%= link_to "ログイン", login_form_path %>
+          </li>
+        <% end %>
       </ul>
     </header>
     
