[Add]投稿とユーザーの紐付け

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,7 @@
 <div class="main posts-new">
   <div class="container">
     <h1 class="form-heading">投稿する</h1>
-    <%= form_tag("/posts/create") do %>
+    <%= form_for @post, url:posts_create_path	do |f| %>
       <div class="form">
         <div class="form-body">
         
@@ -11,8 +11,8 @@
             </div>
           <% end %>
 
-          <textarea name ="content"><%= @post.content %></textarea>
-          <input type="submit" value="投稿">
+          <%= f.text_area :content %>
+          <%= f.submit "投稿" %>
         </div>
       </div>
     <% end %>
