--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,15 @@
 
      <% @posts.each do |post| %>
         <div class="posts-index-item">
+          <div class="post-left">
+            <%= attachment_image_tag post.user, :profile_image %>
+          </div>
+          <div class="post-right">
+            <div class="post-user-name">
+              <%= link_to post.user.name, show_path(post.user.id) %>
+            </div>
             <%= link_to(post.content,"/posts/#{post.id}") %>
+          </div>
         </div>
     <% end %>
 
