--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,15 +1,22 @@
 <div class="main posts-show">
   <div class="container">
     <div class="posts-show-item">
+      <div class="post-user-name">
+         <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' , fallback: "no_image.jpg" %>
+        <%= link_to @user.name, show_path(@user.id) %>
+      </div>
       <p>
       <%= @post.content %>
       </p>
       <div class="post-time">
        <%= @post.created_at%>
       </div>
+        
       <div class="post-menus">
+       <% if @current_user == @post.user %>
         <%= link_to("編集", "/posts/#{@post.id}/edit") %>
         <%= link_to("削除", "/posts/#{@post.id}/destroy",{method: "post"}) %>
+        <% end %>
       </div>
     </div>
   </div>
