--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,7 +11,16 @@
       <div class="post-time">
        <%= @post.created_at%>
       </div>
-        
+        <% if Like.find_by(user_id: @current_user.id, post_id: @post.id) %>
+          <%= link_to likes_destroy_path(@post.id), {method: "post"} do %>
+            <span class="fa fa-heart like-btn-unlike"></span>
+          <% end %>
+        <% else %>
+          <%= link_to likes_create_path(@post.id), {method: "post"} do %>
+            <span class="fa fa-heart like-btn"></span>
+          <% end %>
+        <% end %>
+        <%= @likes_count %>
       <div class="post-menus">
        <% if @current_user == @post.user %>
         <%= link_to("編集", "/posts/#{@post.id}/edit") %>
